--- a/squares_scrapying.ipynb
+++ b/squares_scrapying.ipynb
@@ -9,73 +9,66 @@
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b31d4181",
+   "cell_type": "markdown",
+   "id": "a7ed78d1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Source root: https://www.pro-football-reference.com/super-bowl/\n",
-    "\"\"\" super bowls are listed in descending year with a link in 2nd column (determine class id)\n",
-    "Goal: iterate through each link and perform scraping of box score\n",
-    "Step 1: perform scraping from individual page\n",
-    "Step 2: navigate from root to individual page\n",
-    "Step 3: go through all links and scrape data \"\"\"\n",
-    "# What are the odds of winning for each square?\n",
-    "# Which pair of scores (ex: 3,7 and 7,3) have the highest combined odds of winning?"
+    "## Functions\n",
+    "Iterate through each super bowl link (https://www.pro-football-reference.com/super-bowl) and scrape the box score. Final result is a dataFrame with 10 columns: 1 for each conference to hold the team name, and 1 for each quarter for each conference that holds the cumulative score's final digit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5fd36bf",
+   "id": "eec076b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1\n",
     "def scrapeURL(URL):\n",
     "    page = requests.get(URL)\n",
     "    df_list = pd.read_html(page.text) # create a list from the webpage\n",
-    "    df = df_list[0] # create a dataframe from the list above\n",
+    "    df = df_list[0]\n",
     "    \n",
-    "    # get the team names - to return later with scores\n",
-    "    nfc_team = df[\"Unnamed: 1\"][0]\n",
-    "    afc_team = df[\"Unnamed: 1\"][1]\n",
-    "    teams = [nfc_team, afc_team]\n",
+    "    # get the team names\n",
+    "    team1 = df[\"Unnamed: 1\"][0]\n",
+    "    team2 = df[\"Unnamed: 1\"][1]\n",
+    "    teams = [team1, team2]\n",
     "    \n",
     "    # get the scores\n",
-    "    nfc_scores = [df[\"1\"][0], df[\"2\"][0], df[\"3\"][0], df[\"4\"][0]]\n",
-    "    afc_scores = [df[\"1\"][1], df[\"2\"][1], df[\"3\"][1], df[\"4\"][1]]\n",
-    "    scores = [nfc_scores, afc_scores]\n",
+    "    scores1 = [int(df[\"1\"][0]), int(df[\"2\"][0]), int(df[\"3\"][0]), int(df[\"4\"][0])]\n",
+    "    scores2 = [int(df[\"1\"][1]), int(df[\"2\"][1]), int(df[\"3\"][1]), int(df[\"4\"][1])]\n",
+    "    scores = [scores1, scores2]\n",
     "    \n",
     "    return([teams, scores])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5c6ce44c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2\n",
     "def getURLs():\n",
     "    url = \"https://www.pro-football-reference.com/super-bowl\"\n",
     "    reqs = requests.get(url)\n",
     "    soup = BeautifulSoup(reqs.text, 'html.parser')\n",
-    "    \n",
     "    base = \"https://www.pro-football-reference.com/\"\n",
+    "    \n",
     "    url_list = []\n",
-    "    table = soup.find(class_=\"table_container\")\n",
+    "    table = soup.find(class_=\"table_container\")  # table object -> body -> rows -> data -> link\n",
     "    tbody = table.find('tbody')\n",
     "    tr_body = tbody.find_all('tr')\n",
     "    for trb in tr_body:\n",
     "        for td in trb.find('td'):\n",
-    "            try:\n",
+    "            try: \n",
     "                link = td.get('href')\n",
     "                if(link != \"None\"):\n",
     "                    url_list.append(base + link)\n",
@@ -106,31 +99,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "45f0407e",
+   "execution_count": 6,
+   "id": "792141d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['Tampa Bay Buccaneers', 'Kansas City Chiefs'], ['San Francisco 49ers', 'Kansas City Chiefs'], ['Los Angeles Rams', 'New England Patriots'], ['Philadelphia Eagles', 'New England Patriots'], ['New England Patriots', 'Atlanta Falcons'], ['Denver Broncos', 'Carolina Panthers'], ['Seattle Seahawks', 'New England Patriots'], ['Seattle Seahawks', 'Denver Broncos'], ['San Francisco 49ers', 'Baltimore Ravens'], ['New York Giants', 'New England Patriots'], ['Pittsburgh Steelers', 'Green Bay Packers'], ['New Orleans Saints', 'Indianapolis Colts'], ['Pittsburgh Steelers', 'Arizona Cardinals'], ['New York Giants', 'New England Patriots'], ['Indianapolis Colts', 'Chicago Bears'], ['Seattle Seahawks', 'Pittsburgh Steelers'], ['Philadelphia Eagles', 'New England Patriots'], ['New England Patriots', 'Carolina Panthers'], ['Tampa Bay Buccaneers', 'Oakland Raiders'], ['St. Louis Rams', 'New England Patriots'], ['Baltimore Ravens', 'New York Giants'], ['St. Louis Rams', 'Tennessee Titans'], ['Denver Broncos', 'Atlanta Falcons'], ['Green Bay Packers', 'Denver Broncos'], ['New England Patriots', 'Green Bay Packers'], ['Pittsburgh Steelers', 'Dallas Cowboys'], ['San Francisco 49ers', 'San Diego Chargers'], ['Dallas Cowboys', 'Buffalo Bills'], ['Dallas Cowboys', 'Buffalo Bills'], ['Washington Redskins', 'Buffalo Bills'], ['New York Giants', 'Buffalo Bills'], ['San Francisco 49ers', 'Denver Broncos'], ['San Francisco 49ers', 'Cincinnati Bengals'], ['Washington Redskins', 'Denver Broncos'], ['New York Giants', 'Denver Broncos'], ['New England Patriots', 'Chicago Bears'], ['San Francisco 49ers', 'Miami Dolphins'], ['Washington Redskins', 'Los Angeles Raiders'], ['Washington Redskins', 'Miami Dolphins'], ['San Francisco 49ers', 'Cincinnati Bengals'], ['Oakland Raiders', 'Philadelphia Eagles'], ['Los Angeles Rams', 'Pittsburgh Steelers'], ['Pittsburgh Steelers', 'Dallas Cowboys'], ['Denver Broncos', 'Dallas Cowboys'], ['Oakland Raiders', 'Minnesota Vikings'], ['Pittsburgh Steelers', 'Dallas Cowboys'], ['Pittsburgh Steelers', 'Minnesota Vikings'], ['Minnesota Vikings', 'Miami Dolphins'], ['Washington Redskins', 'Miami Dolphins'], ['Miami Dolphins', 'Dallas Cowboys'], ['Dallas Cowboys', 'Baltimore Colts'], ['Minnesota Vikings', 'Kansas City Chiefs'], ['New York Jets', 'Baltimore Colts'], ['Oakland Raiders', 'Green Bay Packers'], ['Kansas City Chiefs', 'Green Bay Packers']], [[[7, 14, 10, 0], [3, 3, 3, 0]], [[3, 7, 10, 0], [7, 3, 0, 21]], [[0, 0, 3, 0], [0, 3, 0, 10]], [[9, 13, 7, 12], [3, 9, 14, 7]], [[0, 3, 6, 19], [0, 21, 7, 0]], [[10, 3, 3, 8], [0, 7, 0, 3]], [[0, 14, 10, 0], [0, 14, 0, 14]], [[8, 14, 14, 7], [0, 0, 8, 0]], [[3, 3, 17, 8], [7, 14, 7, 6]], [[9, 0, 6, 6], [0, 10, 7, 0]], [[0, 10, 7, 8], [14, 7, 0, 10]], [[0, 6, 10, 15], [10, 0, 7, 0]], [[3, 14, 3, 7], [0, 7, 0, 16]], [[3, 0, 0, 14], [0, 7, 0, 7]], [[6, 10, 6, 7], [14, 0, 3, 0]], [[3, 0, 7, 0], [0, 7, 7, 7]], [[0, 7, 7, 7], [0, 7, 7, 10]], [[0, 14, 0, 18], [0, 10, 0, 19]], [[3, 17, 14, 14], [3, 0, 6, 12]], [[3, 0, 0, 14], [0, 14, 3, 3]], [[7, 3, 14, 10], [0, 0, 7, 0]], [[3, 6, 7, 7], [0, 0, 6, 10]], [[7, 10, 0, 17], [3, 3, 0, 13]], [[7, 7, 3, 7], [7, 10, 7, 7]], [[14, 0, 7, 0], [10, 17, 8, 0]], [[0, 7, 0, 10], [10, 3, 7, 7]], [[14, 14, 14, 7], [7, 3, 8, 8]], [[6, 0, 14, 10], [3, 10, 0, 0]], [[14, 14, 3, 21], [7, 3, 7, 0]], [[0, 17, 14, 6], [0, 0, 10, 14]], [[3, 7, 7, 3], [3, 9, 0, 7]], [[13, 14, 14, 14], [3, 0, 7, 0]], [[3, 0, 3, 14], [0, 3, 10, 3]], [[0, 35, 0, 7], [10, 0, 0, 0]], [[7, 2, 17, 13], [10, 0, 0, 10]], [[3, 0, 0, 7], [13, 10, 21, 2]], [[7, 21, 10, 0], [10, 6, 0, 0]], [[0, 3, 6, 0], [7, 14, 14, 3]], [[0, 10, 3, 14], [7, 10, 0, 0]], [[7, 13, 0, 6], [0, 0, 7, 14]], [[14, 0, 10, 3], [0, 3, 0, 7]], [[7, 6, 6, 0], [3, 7, 7, 14]], [[7, 14, 0, 14], [7, 7, 3, 14]], [[0, 0, 10, 0], [10, 3, 7, 7]], [[0, 16, 3, 13], [0, 0, 7, 7]], [[7, 0, 0, 14], [7, 3, 0, 7]], [[0, 2, 7, 7], [0, 0, 0, 6]], [[0, 0, 0, 7], [14, 3, 7, 0]], [[0, 0, 0, 7], [7, 7, 0, 0]], [[0, 3, 0, 0], [3, 7, 7, 7]], [[3, 10, 0, 0], [0, 6, 0, 10]], [[0, 0, 7, 0], [3, 13, 7, 0]], [[0, 7, 6, 3], [0, 0, 0, 7]], [[0, 7, 0, 7], [3, 13, 10, 7]], [[0, 10, 0, 0], [7, 7, 14, 7]]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Final product\n",
-    "data = iterateSuperBowls(getURLs())\n",
-    "print(data)"
+    "def checkConf(df):\n",
+    "    NFC = [\"Dallas Cowboys\", \"Philadelphia Eagles\", \"New York Giants\", \"Washington Football Team\",\n",
+    "          \"Green Bay Packers\", \"Minnesota Vikings\", \"Chicago Bears\", \"Detroit Lions\",\n",
+    "          \"Tampa Bay Buccaneers\", \"New Orleans Saints\", \"Atlanta Falcons\", \"Carolina Panthers\",\n",
+    "          \"Arizona Cardinals\", \"Los Angeles Rams\", \"Seattle Seahawks\", \"San Francisco 49ers\",\n",
+    "          \"Washington Redskins\", \"St. Louis Rams\"]\n",
+    "    \n",
+    "    for i in range(len(df[\"AFC\"])):  \n",
+    "        if(df[\"AFC\"].iloc[i] in NFC):                      \n",
+    "            dummy = df[\"AFC\"].iloc[i]      # store name to be swapped and make swap\n",
+    "            df[\"AFC\"].iloc[i] = df[\"NFC\"].iloc[i]\n",
+    "            df[\"NFC\"].iloc[i] = dummy\n",
+    " \n",
+    "            temp = df[\"AFC scores\"].iloc[i]   # store score to be swapped and make swap\n",
+    "            df[\"AFC scores\"].iloc[i] = df[\"NFC scores\"].iloc[i]\n",
+    "            df[\"NFC scores\"].iloc[i] = temp           \n",
+    "    \n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c170bca1",
+   "execution_count": 8,
+   "id": "679b3ac5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def quarter_scores(df):\n",
+    "    # Create new column for individual quarters and set initial value to 0\n",
+    "    df[\"AFC Q1\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"AFC Q2\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"AFC Q3\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"AFC Q4\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"NFC Q1\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"NFC Q2\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"NFC Q3\"] = df.apply(lambda x: 0, axis=1)\n",
+    "    df[\"NFC Q4\"] = df.apply(lambda x: 0, axis=1)\n",
+    "\n",
+    "    # update score with only last digit for each quarter\n",
+    "    for i in range(len(combined_df[\"AFC\"])):\n",
+    "        df[\"AFC Q1\"].iloc[i] = df[\"AFC scores\"].iloc[i][0] % 10\n",
+    "        df[\"AFC Q2\"].iloc[i] = (df[\"AFC scores\"].iloc[i][1] + df[\"AFC Q1\"].iloc[i]) % 10\n",
+    "        df[\"AFC Q3\"].iloc[i] = (df[\"AFC scores\"].iloc[i][2] + df[\"AFC Q2\"].iloc[i]) % 10\n",
+    "        df[\"AFC Q4\"].iloc[i] = (df[\"AFC scores\"].iloc[i][3] + df[\"AFC Q3\"].iloc[i]) % 10\n",
+    "        df[\"NFC Q1\"].iloc[i] = df[\"NFC scores\"].iloc[i][0] % 10\n",
+    "        df[\"NFC Q2\"].iloc[i] = (df[\"NFC scores\"].iloc[i][1] + df[\"NFC Q1\"].iloc[i]) % 10\n",
+    "        df[\"NFC Q3\"].iloc[i] = (df[\"NFC scores\"].iloc[i][2] + df[\"NFC Q2\"].iloc[i]) % 10\n",
+    "        df[\"NFC Q4\"].iloc[i] = (df[\"NFC scores\"].iloc[i][3] + df[\"NFC Q3\"].iloc[i]) % 10\n",
+    "    \n",
+    "    df.drop(['AFC scores', 'NFC scores'], axis=1, inplace=True)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc95c271",
+   "metadata": {},
+   "source": [
+    "## Driver    \n",
+    "**getUrls** scrapes the website for all urls to individual super bowl box squares     \n",
+    "**iterateSuperBowls** goes through each super bowl url and calls **scrapeURL** to get the data, and then adds the data to teams and scores dataframes\n",
+    "\n",
+    "The data is ordered by descending super bowl number by default, so teams and scores are reversed to get them in ascending order. **checkConf** will check for NFC teams labeled as AFC, and switch values to appropriate column if needed. \n",
+    "\n",
+    "Note: SuperBowl 3 featured the New York Jets and the Baltimore Colts, where both teams are currently in the AFC. The Jets got labeled as the AFC team and I decided to leave it\n",
+    "\n",
+    "**quarter_scores** creates columns for each quarter and calculates the cumulative final digit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "45f0407e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams, scores = iterateSuperBowls(getURLs())\n",
+    "teams.reverse()\n",
+    "scores.reverse()\n",
+    "\n",
+    "teams_df = pd.DataFrame(teams, columns=[\"AFC\",\"NFC\"])\n",
+    "scores_df = pd.DataFrame(scores, columns=[\"AFC scores\", \"NFC scores\"])\n",
+    "combined_df = teams_df.join(scores_df, how=\"inner\")\n",
+    "\n",
+    "# fix conference labeling\n",
+    "cleaned_df = checkConf(combined_df)\n",
+    "\n",
+    "# create final DataFrame\n",
+    "final_df = quarter_scores(cleaned_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09954def",
+   "metadata": {},
+   "source": [
+    "## Export data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2fd84736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv('data.csv', index=False) \n",
+    "\n",
+    "# include initial raw data for other analysis if wanted\n",
+    "teams_df.to_csv('teams.csv', index=False)\n",
+    "scores_df.to_csv('scores.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
