--- a/PlayoffSquares/scrape_nfl_playoffs.ipynb
+++ b/PlayoffSquares/scrape_nfl_playoffs.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "016450c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
    ]
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "14c4fdcb",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6a3cbdce",
    "metadata": {},
    "outputs": [],
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a73c9cee",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8a10d726",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4c6d5bcb",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5e6413ff",
    "metadata": {},
    "outputs": [],
@@ -241,10 +242,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dcf3ac35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nate\\anaconda3\\envs\\mlenv\\lib\\site-packages\\pandas\\core\\indexing.py:1637: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Away</th>\n",
+       "      <th>Home</th>\n",
+       "      <th>Away Q1</th>\n",
+       "      <th>Away Q2</th>\n",
+       "      <th>Away Q3</th>\n",
+       "      <th>Away Q4</th>\n",
+       "      <th>Home Q1</th>\n",
+       "      <th>Home Q2</th>\n",
+       "      <th>Home Q3</th>\n",
+       "      <th>Home Q4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Green Bay Packers</td>\n",
+       "      <td>Dallas Cowboys</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kansas City Chiefs</td>\n",
+       "      <td>Green Bay Packers</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kansas City Chiefs</td>\n",
+       "      <td>Buffalo Bills</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Los Angeles Rams</td>\n",
+       "      <td>Green Bay Packers</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cleveland Browns</td>\n",
+       "      <td>Dallas Cowboys</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Away               Home  Away Q1  Away Q2  Away Q3  Away Q4  \\\n",
+       "0   Green Bay Packers     Dallas Cowboys        4        1        8        4   \n",
+       "1  Kansas City Chiefs  Green Bay Packers        0        0        0        0   \n",
+       "2  Kansas City Chiefs      Buffalo Bills        7        7        7        1   \n",
+       "4    Los Angeles Rams  Green Bay Packers        7        7        7        7   \n",
+       "5    Cleveland Browns     Dallas Cowboys        0        7        7        4   \n",
+       "\n",
+       "   Home Q1  Home Q2  Home Q3  Home Q4  \n",
+       "0        4        7        0        7  \n",
+       "1        7        4        8        5  \n",
+       "2        7        7        7        7  \n",
+       "4        0        4        1        8  \n",
+       "5        4        4        5        2  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "teams, scores = iterateGames(url_list)\n",
     "\n",
@@ -267,12 +403,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9624fa47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#final_df.to_csv('playoff_data.csv', index=False)"
+    "final_df.to_csv('playoff_squares_data.csv', index=False)"
    ]
   }
  ],
