--- a/PlayoffAnalysis/teamPlayoffStatsScraper.ipynb
+++ b/PlayoffAnalysis/teamPlayoffStatsScraper.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f90d0be7",
-   "metadata": {},
-   "source": [
-    "# Not playoff squares data analysis\n",
-    "Do total points scored and allowed per game, total yards and allowed per game, times covered the spread\n",
-    "\n",
-    "Show results based on all playoff data, as well as from 2000 and on only (modern era)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d03be28d",
@@ -76,17 +65,6 @@
    "source": [
     "## Function to go through url and return points for, points against, yards for, yards against, final point spread\n",
     "Use points for, points against, and final point spread to create a new column called \"Covered\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ad0da99",
-   "metadata": {},
-   "source": [
-    "## Function works for 2 the 2 test cases: \n",
-    "https://www.pro-football-reference.com/boxscores/196701150gnb.htm \n",
-    "\n",
-    "https://www.pro-football-reference.com/boxscores/202001110sfo.htm"
    ]
   },
   {
@@ -278,25 +256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32a0999",
-   "metadata": {},
-   "source": [
-    "#### Testing to find url for game that screwed up analysis\n",
-    "\n",
-    "total_games = 0   #538 in dataset\n",
-    "target = 240\n",
-    "for i in range(len(url_list)):\n",
-    "    for j in range(len(url_list[i])):\n",
-    "        total_games += 1\n",
-    "        if(total_games == target):\n",
-    "            answer = [i,j]\n",
-    "\n",
-    "answer\n",
-    "#url_list[i][j]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4e1184bd",
    "metadata": {},
    "source": [
@@ -313,7 +272,7 @@
     "teams, scores, odds, rushing, passing = iterateGames(url_list)\n",
     "\n",
     "teams_df = pd.DataFrame(teams, columns=[\"Away\", \"Home\"])\n",
-    "scores_df = pd.DataFrame(scores, columns=[\"Away score\", \"Home score\"])\n",
+    "scores_df = pd.DataFrame(scores, columns=[\"Away Score\", \"Home Score\"])\n",
     "odds_df = pd.DataFrame(odds, columns=[\"Line\", \"Over/Under\"])\n",
     "rushing_df = pd.DataFrame(rushing, columns=[\"Away Rushing\", \"Home Rushing\"])\n",
     "passing_df = pd.DataFrame(passing, columns=[\"Away Passing\", \"Home Passing\"])"
@@ -425,8 +384,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -460,7 +419,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Away score  Home score\n",
+       "   Away Score  Home Score\n",
        "0          34          27\n",
        "1          10          35\n",
        "2          31           7\n",
@@ -743,8 +702,8 @@
        "      <th></th>\n",
        "      <th>Away</th>\n",
        "      <th>Home</th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -831,7 +790,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Away                Home  Away score  Home score\n",
+       "                     Away                Home  Away Score  Home Score\n",
        "0       Green Bay Packers      Dallas Cowboys          34          27\n",
        "1      Kansas City Chiefs   Green Bay Packers          10          35\n",
        "2      Kansas City Chiefs       Buffalo Bills          31           7\n",
@@ -887,8 +846,8 @@
        "      <th></th>\n",
        "      <th>Away</th>\n",
        "      <th>Home</th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "      <th>Line</th>\n",
        "      <th>Over/Under</th>\n",
        "    </tr>\n",
@@ -999,7 +958,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Away                Home  Away score  Home score  \\\n",
+       "                     Away                Home  Away Score  Home Score  \\\n",
        "0       Green Bay Packers      Dallas Cowboys          34          27   \n",
        "1      Kansas City Chiefs   Green Bay Packers          10          35   \n",
        "2      Kansas City Chiefs       Buffalo Bills          31           7   \n",
@@ -1067,8 +1026,8 @@
        "      <th></th>\n",
        "      <th>Away</th>\n",
        "      <th>Home</th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "      <th>Line</th>\n",
        "      <th>Over/Under</th>\n",
        "      <th>Away Rushing</th>\n",
@@ -1203,7 +1162,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Away                Home  Away score  Home score  \\\n",
+       "                     Away                Home  Away Score  Home Score  \\\n",
        "0       Green Bay Packers      Dallas Cowboys          34          27   \n",
        "1      Kansas City Chiefs   Green Bay Packers          10          35   \n",
        "2      Kansas City Chiefs       Buffalo Bills          31           7   \n",
@@ -1271,8 +1230,8 @@
        "      <th></th>\n",
        "      <th>Away</th>\n",
        "      <th>Home</th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "      <th>Line</th>\n",
        "      <th>Over/Under</th>\n",
        "      <th>Away Rushing</th>\n",
@@ -1431,7 +1390,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Away                Home  Away score  Home score  \\\n",
+       "                     Away                Home  Away Score  Home Score  \\\n",
        "0       Green Bay Packers      Dallas Cowboys          34          27   \n",
        "1      Kansas City Chiefs   Green Bay Packers          10          35   \n",
        "2      Kansas City Chiefs       Buffalo Bills          31           7   \n",
@@ -1512,8 +1471,8 @@
        "      <th></th>\n",
        "      <th>Away</th>\n",
        "      <th>Home</th>\n",
-       "      <th>Away score</th>\n",
-       "      <th>Home score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Score</th>\n",
        "      <th>Line</th>\n",
        "      <th>Over/Under</th>\n",
        "      <th>Away Rushing</th>\n",
@@ -1672,7 +1631,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Away                Home  Away score  Home score  \\\n",
+       "                     Away                Home  Away Score  Home Score  \\\n",
        "0       Green Bay Packers      Dallas Cowboys          34          27   \n",
        "1      Kansas City Chiefs   Green Bay Packers          10          35   \n",
        "2      Kansas City Chiefs       Buffalo Bills          31           7   \n",
