--- a/PlayoffSquares/playoff_squares_stats.ipynb
+++ b/PlayoffSquares/playoff_squares_stats.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'"
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
