--- a/PlayoffSquares/scrape_nfl_playoffs.ipynb
+++ b/PlayoffSquares/scrape_nfl_playoffs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "016450c7",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "14c4fdcb",
    "metadata": {},
    "outputs": [],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6a3cbdce",
    "metadata": {},
    "outputs": [],
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a73c9cee",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8a10d726",
    "metadata": {},
    "outputs": [],
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4c6d5bcb",
    "metadata": {},
    "outputs": [],
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5e6413ff",
    "metadata": {},
    "outputs": [],
@@ -242,145 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dcf3ac35",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Nate\\anaconda3\\envs\\mlenv\\lib\\site-packages\\pandas\\core\\indexing.py:1637: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_block(indexer, value, name)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Away</th>\n",
-       "      <th>Home</th>\n",
-       "      <th>Away Q1</th>\n",
-       "      <th>Away Q2</th>\n",
-       "      <th>Away Q3</th>\n",
-       "      <th>Away Q4</th>\n",
-       "      <th>Home Q1</th>\n",
-       "      <th>Home Q2</th>\n",
-       "      <th>Home Q3</th>\n",
-       "      <th>Home Q4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Green Bay Packers</td>\n",
-       "      <td>Dallas Cowboys</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Kansas City Chiefs</td>\n",
-       "      <td>Green Bay Packers</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Kansas City Chiefs</td>\n",
-       "      <td>Buffalo Bills</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Los Angeles Rams</td>\n",
-       "      <td>Green Bay Packers</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Cleveland Browns</td>\n",
-       "      <td>Dallas Cowboys</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Away               Home  Away Q1  Away Q2  Away Q3  Away Q4  \\\n",
-       "0   Green Bay Packers     Dallas Cowboys        4        1        8        4   \n",
-       "1  Kansas City Chiefs  Green Bay Packers        0        0        0        0   \n",
-       "2  Kansas City Chiefs      Buffalo Bills        7        7        7        1   \n",
-       "4    Los Angeles Rams  Green Bay Packers        7        7        7        7   \n",
-       "5    Cleveland Browns     Dallas Cowboys        0        7        7        4   \n",
-       "\n",
-       "   Home Q1  Home Q2  Home Q3  Home Q4  \n",
-       "0        4        7        0        7  \n",
-       "1        7        4        8        5  \n",
-       "2        7        7        7        7  \n",
-       "4        0        4        1        8  \n",
-       "5        4        4        5        2  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "teams, scores = iterateGames(url_list)\n",
     "\n",
@@ -403,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9624fa47",
    "metadata": {},
    "outputs": [],
@@ -428,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
