--- a/SuperBowlSquares/superbolw_squares_stats.ipynb
+++ b/SuperBowlSquares/superbolw_squares_stats.ipynb
@@ -180,7 +180,8 @@
     "\n",
     "# populate quarter summary dataFrames and total summary df\n",
     "for i in range(len(df[\"AFC\"])):\n",
-    "    q1_sum[df[\"AFC Q1\"].iloc[i]][df[\"NFC Q1\"].iloc[i]] += 1\n",
+    "    q1_sum[df[\"AFC Q1\"].iloc[i]]\n",
+    "    [df[\"NFC Q1\"].iloc[i]] += 1\n",
     "    q2_sum[df[\"AFC Q2\"].iloc[i]][df[\"NFC Q2\"].iloc[i]] += 1\n",
     "    q3_sum[df[\"AFC Q3\"].iloc[i]][df[\"NFC Q3\"].iloc[i]] += 1\n",
     "    q4_sum[df[\"AFC Q4\"].iloc[i]][df[\"NFC Q4\"].iloc[i]] += 1\n",
