--- a/SuperBowlSquares/superbowl_squares_scrapying.ipynb
+++ b/SuperBowlSquares/superbowl_squares_scrapying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "44f01f9c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eec076b0",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5c6ce44c",
    "metadata": {},
    "outputs": [],
@@ -80,12 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32963c5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3\n",
     "def iterateSuperBowls(data):\n",
     "    all_teams = []\n",
     "    all_scores = []\n",
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "792141d5",
    "metadata": {},
    "outputs": [],
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "679b3ac5",
    "metadata": {},
    "outputs": [],
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "45f0407e",
    "metadata": {},
    "outputs": [],
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2fd84736",
    "metadata": {},
    "outputs": [],
@@ -214,8 +213,8 @@
     "final_df.to_csv('data.csv', index=False) \n",
     "\n",
     "# include initial raw data for other analysis if wanted\n",
-    "teams_df.to_csv('teams.csv', index=False)\n",
-    "scores_df.to_csv('scores.csv', index=False)"
+    "#teams_df.to_csv('teams.csv', index=False)\n",
+    "#scores_df.to_csv('scores.csv', index=False)"
    ]
   }
  ],
@@ -235,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
