--- a/SuperBowlSquares/superbolw_squares_stats.ipynb
+++ b/SuperBowlSquares/superbolw_squares_stats.ipynb
@@ -152,7 +152,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"data.csv\", index_col=False)\n",
-    "# increase index to start with 1 - now represents Super Bowl number\n",
+    "# increase index to start with 1 to represent Super Bowl number\n",
     "df.index = range(1,len(df)+1)\n",
     "df.tail(5)"
    ]
@@ -180,8 +180,7 @@
     "\n",
     "# populate quarter summary dataFrames and total summary df\n",
     "for i in range(len(df[\"AFC\"])):\n",
-    "    q1_sum[df[\"AFC Q1\"].iloc[i]]\n",
-    "    [df[\"NFC Q1\"].iloc[i]] += 1\n",
+    "    q1_sum[df[\"AFC Q1\"].iloc[i]][df[\"NFC Q1\"].iloc[i]] += 1\n",
     "    q2_sum[df[\"AFC Q2\"].iloc[i]][df[\"NFC Q2\"].iloc[i]] += 1\n",
     "    q3_sum[df[\"AFC Q3\"].iloc[i]][df[\"NFC Q3\"].iloc[i]] += 1\n",
     "    q4_sum[df[\"AFC Q4\"].iloc[i]][df[\"NFC Q4\"].iloc[i]] += 1\n",
@@ -195,7 +194,7 @@
    "metadata": {},
    "source": [
     "## Calculate expected values\n",
-    "**Assuming \\\\$5 per square with 25\\% percent payout at the end of each quarter**"
+    "**Assuming \\\\$5 per square with 25\\% percent payout at the end of each quarter: $125 per quarter**"
    ]
   },
   {
@@ -205,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ev = (occurance/total_occurances)*payout\n",
+    "# ev = (occurances/total_occurances)*payout\n",
     "q1_ev = q1_sum/len(df[\"AFC\"]) * 125\n",
     "q2_ev = q2_sum/len(df[\"AFC\"]) * 125\n",
     "q3_ev = q3_sum/len(df[\"AFC\"]) * 125\n",
