--- a/SuperBowlSquares/superbowl_squares_scrapying.ipynb
+++ b/SuperBowlSquares/superbowl_squares_scrapying.ipynb
@@ -12,7 +12,7 @@
     "from bs4 import BeautifulSoup\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'"
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "    soup = BeautifulSoup(reqs.text, 'html.parser')\n",
     "    base = \"https://www.pro-football-reference.com/\"\n",
     "    \n",
-    "    url_list = []\n",
+    "    url_list = [] # to hold urls for each super bowl\n",
     "    table = soup.find(class_=\"table_container\")  # table object -> body -> rows -> data -> link\n",
     "    tbody = table.find('tbody')\n",
     "    tr_body = tbody.find_all('tr')\n",
@@ -111,7 +111,7 @@
     "          \"Washington Redskins\", \"St. Louis Rams\"]\n",
     "    \n",
     "    for i in range(len(df[\"AFC\"])):  \n",
-    "        if(df[\"AFC\"].iloc[i] in NFC):                      \n",
+    "        if(df[\"AFC\"].iloc[i] in NFC):  # check to see if an NFC team is labeled as AFC                    \n",
     "            dummy = df[\"AFC\"].iloc[i]      # store name to be swapped and make swap\n",
     "            df[\"AFC\"].iloc[i] = df[\"NFC\"].iloc[i]\n",
     "            df[\"NFC\"].iloc[i] = dummy\n",
